fixed contact and special on mobile version

--- a/src/components/contact/contact.styles.scss
+++ b/src/components/contact/contact.styles.scss
@@ -15,6 +15,7 @@
     flex-direction: column;
     // flex-basis: 100%;
     flex: 1;
+    margin-bottom: 150px;
   }
 }
 .info {
@@ -29,6 +30,7 @@
     flex-direction: column;
     flex-basis: 100%;
     flex: 1;
+    margin: 8px;
   }
 }
 
@@ -38,12 +40,14 @@
   flex: 1;
   background-color: mistyrose;
   border-radius: 10px;
+  margin-left: 3px;
   @media screen and (max-width: 800px) {
     height: 400px;
     display: flex;
     flex-direction: column;
     flex-basis: 100%;
     flex: 1;
+    // margin-bottom: 40px;
   }
 }
 li {
